# MaxEnt

./: .gitignore  README.md  pyproject.toml  requirements.txt
Basis/: basis.py  max_ent.py
Estimate_Distribution/: config.ini  dfft.py  maclaurin.py  sampling_data.py
Estimate_Distribution/deriving_uniform_distribution/: lagrange.ipynb
Maximum_Entropy_Principle/: combined.py  visualizer.py
data/: cars_data.csv
docs/: proposal_federated_maxent_hdc.md
experiments/: basis.py  combined.py  dashboard.py  dfft.py  fed_phase1_synth.py  fed_phase2_dp.py  fed_phase3_creditcard.py  federated_creditcard.py  federated_dp_sweep.py  federated_ibm_aml.py  federated_synthetic.py  fidelity_tests.txt  hdc_phase1_kde.py  hdc_phase2_maxent.py  hdc_phase3_sweep.py  hdc_phase4_online.py  maclaurin.py  method_fourier_vs_poly.py  method_kde.py  method_stability.py  sampling_data.py  uav_channel_sim.py
experiments/deriving_uniform_distribution/: lagrange.py
legacy/: README.md  __init__.py  basis.py  combined.py  dfft.py  io.py  maclaurin.py  plotting.py  requirements.txt  sampling_data.py  visualizer.py
maxent/: __init__.py  _compat.py  core.py  data.py  datasets.py  federated.py  hdc.py  maxent_fit.py  metrics.py  streaming.py  study.py
maxent_federated.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: run.py  test_federated.py  test_hdc.py  test_maxent.py
