[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "maxent-federated"
version = "0.1.0"
description = "Federated maximum-entropy distribution estimation via hypervector sketches"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dashboard = ["dash", "plotly"]
test = ["pytest"]

# Only the library is installed; experiments/ and tests/ are run from the repo
# root (e.g. `python -m experiments.dashboard`).
[tool.setuptools]
packages = ["maxent"]
